--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,16 +11,20 @@ services:
       - 3306:3306
     volumes:
       - D:\\env\\mysql/data:/var/lib/mysql
-#      - D:\\env\\mysql/log:/var/log/mysql
-#      - D:\\env\\mysql/conf:/etc/mysql
-    configs:
-      - source: mysql_config
-        target: /etc/mysql/conf.d/mysql-test.conf
-        uid: '103'
-        gid: '103'
-        mode: 0777
+      - D:\\env\\mysql/log:/var/log/mysql
+      - D:\\env\\mysql/conf:/etc/mysql
+    restart: always
+    entrypoint: "chmod -R 644 /etc/mysql; docker-entrypoint.sh"
+    command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci'
     networks:
       - maxwell
+  adminer:
+    image: adminer:4.8.0
+    restart: always
+    depends_on:
+      - mysql
+    ports:
+      - 8080:8080
   zookeeper:
     image: zookeeper:3.7.0
     container_name: zookeeper
@@ -29,6 +33,8 @@ services:
   kafka:
     image: wurstmeister/kafka:2.12-2.3.1
     container_name: kafka
+    depends_on:
+      - zookeeper
     environment:
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181/kafka
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://:9092
@@ -38,20 +44,28 @@ services:
   kafkamanager:
     image: kafkamanager/kafka-manager:3.0.0.4
     container_name: kafkamanager
+    depends_on:
+      - kafka
     networks:
       - maxwell
   maxwell:
     build: .
     image: zendesk/maxwell:1.33.0
     container_name: maxwell
-    command: [ "-c", "sed -i 's/\r//' `grep maxwell -rl /app/bin/`; bin/maxwell-docker" ]
+    command:
+      - "-c"
+      - "sed -i 's/\r//' `grep maxwell -rl /app/bin/`; bin/maxwell-docker"
     #command: [ "-c","sed -i 's/\r//' `grep maxwell -rl /app/bin/`; while true; do echo hello; sleep 2; done" ]
     entrypoint: [ "/bin/bash" ]
+    depends_on:
+      - mysql
+      - kafka
     environment:
       - MYSQL_USER=lessin
       - MYSQL_USERNAME=root
       - MYSQL_PASSWORD=123456
       - MYSQL_HOST=mysql
+      - MYSQL_PORT=3306
       - MAXWELL_PRODUCER=kafka
       - KAFKA_BROKERS=kafka:9201
     #      - MAXWELL_OPTIONS
@@ -65,11 +79,6 @@ networks:
   maxwell:
     driver: "bridge"
     name: "maxwell-network"
-configs:
-  mysql_config:
-    file: ./my.cnf
-#  my_other_config:
-#    external: true
 
 # docker restart maxwell
 # docker attach maxwell
@@ -81,3 +90,4 @@ configs:
 # sed -i "s/^M//" filename
 # sed -i 's/\r//' `grep maxwell -rl /app/bin/`
 
+# sudo usermod -d /var/lib/mysql/ mysql
