--- a/my.cnf
+++ b/my.cnf
@@ -1,13 +1,27 @@
 [mysqld]
-server_id=1
-log-bin=master
+skip-host-cache
+skip-name-resolve
+pid-file	= /var/run/mysqld/mysqld.pid
+socket		= /var/run/mysqld/mysqld.sock
+datadir		= /var/lib/mysql
+log-error	= /var/log/mysql/error.log
+bind-address = 0.0.0.0
+symbolic-links=0
+server_id=9
+log-bin=/var/lib/mysql/master
 binlog_format=row
+
 gtid-mode=ON
 log-slave-updates=ON
 enforce-gtid-consistency=true
-innodb_data_file_path = ibdata1:10M:autoextend
-set-variable = innodb_buffer_pool_size=70M
-set-variable = innodb_additional_mem_pool_size=10M
-set-variable = innodb_log_file_size=20M
-set-variable = innodb_log_buffer_size=8M
+# set-variable = innodb_buffer_pool_size=70M
+# set-variable = innodb_additional_mem_pool_size=10M
+# set-variable = innodb_log_file_size=20M
+# set-variable = innodb_log_buffer_size=8M
 innodb_flush_log_at_trx_commit=1
+innodb_data_file_path = ibdata1:10M:autoextend
+
+[mysqldump]
+quick
+quote-names
+max_allowed_packet	= 16M
