--- a/my.cnf
+++ b/my.cnf
@@ -11,3 +11,6 @@ set-variable = innodb_additional_mem_pool_size=10M
 set-variable = innodb_log_file_size=20M
 set-variable = innodb_log_buffer_size=8M
 innodb_flush_log_at_trx_commit=1
+server_id=1
+log-bin=/var/lib/binlog
+binlog_format=row
